# my_projects

./: README.md
SecureCloudStorage/cryptomator-develop/: README.md
SecureCloudStorage/cryptomator-develop/gradle/: libs.ver___sions.toml
SecureCloudStorage/cryptomator-develop/src/main/cpp/: SECubeAPI.cpp  SECubeAPI.h  SECubeUtils.cpp  configuration.h  example.cpp  org_cryptomator_secube_SECubeConnector.h
SecureCloudStorage/cryptomator-develop/src/main/cpp/sefile/: CMakeLists.txt  SEcureDB.cpp  SEcureDB.h  SEfile.cpp  environment.h
SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L0/: L0.h  L0_provision.cpp
SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L0/Commodities_API/: commodities_api.h
SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L1/: CMakeLists.txt  L1.h
SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L1/Login_Logout_API/: login_logout_api.h
SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L1/Security_API/: security_api.h
SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L1/Utility_API/: utility_api.h
SecureCloudStorage/cryptomator-develop/src/main/java/: module-info.java
SecureCloudStorage/cryptomator-develop/src/main/java/org/cryptomator/launcher/: Cryptomator.java
SecureCloudStorage/cryptomator-develop/src/main/java/org/cryptomator/secube/: SECubeConnector.java
SecureCloudStorage/cryptomator-develop/src/main/java/org/cryptomator/secube/exceptions/: SECubeDatabaseException.java  SECubeException.java  SECubeKeyException.java  SECubeLoginException.java
information_system_security/LAB_3/digital_certificates/: www-polito-it.pem
project_DevSecOps/: README.md
project_SecureCloudStorage/: README.md
project_SecureCloudStorage/cryptomator-develop/: build.gradle.kts  settings.gradle.kts
project_SecureCloudStorage/cryptomator-develop/src/main/cpp/: CMakeLists.txt  SECubeConfiguration.cpp  SECubeConfiguration.h  SECubeConnector.cpp  SECubeExceptions.h  SECubeUtils.h
project_SecureCloudStorage/cryptomator-develop/src/main/cpp/sefile/: SEfile.h
project_SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L0/: CMakeLists.txt
project_SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L0/Communication_API/: communication_api.h
project_SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L0/L0_Base/: L0_base.cpp  L0_base.h
project_SecureCloudStorage/cryptomator-develop/src/main/cpp/sources/L1/L1_Base/: L1_base.h
project_SecureCloudStorage/cryptomator-develop/src/main/cpp/sqlite/: CMakeLists.txt
project_SecureCloudStorage/cryptomator-develop/src/main/java/org/cryptomator/common/: Environment.java
project_SecureCloudStorage/cryptomator-develop/src/main/java/org/cryptomator/ui/addvaultwizard/: CreateNewVaultPasswordController.java
project_SecureCloudStorage/cryptomator-develop/src/main/resources/: logback.xml
project_SecureCloudStorage/cryptomator-develop/src/main/resources/fxml/: addvault_new_password.fxml  unlock_enter_password.fxml
project_SecureCloudStorage/cryptomator-develop/src/main/resources/license/: THIRD-PARTY.txt
project_arm_cortexM3/: README.md
project_arm_cortexM3/extrapoint1_emulator/12_sample_GLCD_TP/: asciilib.crf  core_cm3.crf  funct_led.crf  glcd.crf  glcd.d  irq_button.crf  irq_button.d  irq_rit.crf  irq_timer.crf  irq_timer.d  lib_button.d  lib_joystick.crf  lib_joystick.d  lib_led.d  myfunct.crf  myfunct.d  sample.axf  sample.build_log.htm  sample.c  sample.crf  sample.d  sample.htm  sample.lnp  sample.map  sample.uvguix.alein  sample.uvoptx  sample.uvprojx  sample_Target 1.dep  touchpanel.crf
project_arm_cortexM3/extrapoint1_emulator/12_sample_GLCD_TP/GLCD/: GLCD.c  GLCD.h
project_arm_cortexM3/extrapoint1_emulator/12_sample_GLCD_TP/RIT/: IRQ_RIT.c
project_arm_cortexM3/extrapoint1_emulator/12_sample_GLCD_TP/TouchPanel/: TouchPanel.c
project_arm_cortexM3/extrapoint1_emulator/12_sample_GLCD_TP/button_EXINT/: IRQ_button.c
project_arm_cortexM3/extrapoint1_emulator/12_sample_GLCD_TP/joystick/: lib_joystick.c
project_arm_cortexM3/extrapoint1_emulator/12_sample_GLCD_TP/myfunct/: funct.h  myfunct.c
project_arm_cortexM3/extrapoint1_emulator/12_sample_GLCD_TP/timer/: IRQ_timer.c
project_arm_cortexM3/extrapoint2/extrapoint2/: funct_joystick.crf  funct_joystick.d  funct_led.d  glcd.crf  hzlib.crf  irq_button.crf  irq_button.d  irq_can.crf  irq_can.d  irq_rit.crf  irq_rit.d  irq_timer.crf  irq_timer.d  lib_button.crf  lib_can.crf  lib_can.d  lib_led.crf  lib_rit.crf  lib_rit.d  lib_timer.crf  lib_timer.d  myfunct.crf  myfunct.d  sample.axf  sample.build_log.htm  sample.c  sample.crf  sample.d  sample.htm  sample.lnp  sample.map  sample.uvguix.alein  sample.uvoptx  sample.uvprojx  sample_Target 1.dep  startup_LPC17xx.lst  startup_LPC17xx.s  system_lpc17xx.crf  system_lpc17xx.d  touchpanel.crf  (+1 more)
project_arm_cortexM3/extrapoint2/extrapoint2/CAN/: CAN.h  IRQ_CAN.c  lib_CAN.c
project_arm_cortexM3/extrapoint2/extrapoint2/GLCD/: GLCD.c  GLCD.h
project_arm_cortexM3/extrapoint2/extrapoint2/RIT/: IRQ_RIT.c
project_arm_cortexM3/extrapoint2/extrapoint2/button_EXINT/: IRQ_button.c
project_arm_cortexM3/extrapoint2/extrapoint2/myfunct/: funct.h  myfunct.c
project_arm_cortexM3/extrapoint2/extrapoint2/timer/: IRQ_timer.c
project_edge-infrastructure-ansible/: README.md
project_the_moka/: README.md
project_xv6_RISCV/: README.md
webapp/cmsmall-alekosin/: README.md
webapp/cmsmall-alekosin/client/: package-lock.json  package.json
webapp/cmsmall-alekosin/client/src/: API.jsx  App.jsx
webapp/cmsmall-alekosin/client/src/components/: AuthComponents.jsx  FormRoute.jsx  NavbarComponents.jsx  PagesRoute.jsx
webapp/cmsmall-alekosin/server/: cms_db.sql  cms_db.sqlite  dao.js  index.js  package-lock.json  package.json  user-dao.js
xv6_RISCV/: README.md
(+2 files in other folders)
